--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@
 addopts = -s --alluredir report
 
 # search dir path
-testpaths = ./
+testpaths = ./scripts
 
 # search files name
 python_files = test_*
